--- a/dist_cfg/chobby_config.json
+++ b/dist_cfg/chobby_config.json
@@ -9,7 +9,7 @@
 
     "games" : ["ba:test", "chobby:test"],
     "maps" : [],
-    "engines" : [ "104.0.1-743-g9e82927 maintenance" ],
+    "engines" : [ "104.0.1-968-gb54c668 maintenance" ],
 
 	"auto_download" : true,
 	"auto_start" : true,
