--- a/dist_cfg/config.json
+++ b/dist_cfg/config.json
@@ -14,6 +14,19 @@
             "launch": {
                 "start_args" : ["--menu", "rapid://chobby:test"]
             }
+        },
+        {
+            "package": {
+                "id": "dev-lobby",
+                "display": "Dev Lobby"
+            },
+            "downloads": {
+                "engines" : [ "104.0.1-968-gb54c668 maintenance" ]
+            },
+            "no_start_script" : true,
+            "launch": {
+                "start_args" : ["--menu", "Chobby $VERSION"]
+            }
         }
     ]
 }
