--- a/.github/workflows/transifex_rebase.yml
+++ b/.github/workflows/transifex_rebase.yml
@@ -1,4 +1,4 @@
-name: Translations rebase from master
+name: Translations update English source
 
 on:
   workflow_dispatch: 
@@ -14,15 +14,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          ref: transifex-synchronization-source
 
       - name: Setup Git User
         run: |
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
 
-      - name: Transifex Rebase
+      - name: Update English Source to Transifex
         run: |
-          git checkout transifex-synchronization-source
-          git reset origin/master --hard
-          git push origin transifex-synchronization-source --force-with-lease
+          git fetch origin master
+          git checkout origin/master -- language/en
+          git add language/en
+          git commit -m "[Transifex] Update English source files"
+          git push origin transifex-synchronization-source --force
