Change merge strategy to not miss added/removed languages

--- a/.github/workflows/transifex_merge_translations.yml
+++ b/.github/workflows/transifex_merge_translations.yml
@@ -23,15 +23,11 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-
       - name: Force merge translation directories (excluding English)
         run: |
-          git fetch --unshallow origin transifex-synchronization-source
-          for dir in language/*/; do
-            if [ -d $dir ] && [ "$(basename $dir)" != "en" ]; then
-              git checkout origin/transifex-synchronization-source -- $dir
-              git add $dir
-            fi
-          done
+          git checkout master
+          git rm -r 'language/' ':!language/en/'
+          git fetch origin transifex-synchronization-source
+          git checkout origin/transifex-synchronization-source -- 'language/' ':!language/en/'
           git commit -m "[Transifex] Update translations on master"
-          git push origin master --force
+          git push
