--- a/.luarc.json
+++ b/.luarc.json
@@ -1,4 +1,12 @@
 {
   "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
-  "runtime.version": "Lua 5.1"
+  "runtime.version": "Lua 5.1",
+  "completion.requireSeparator": "/",
+  "runtime.path": [
+      "?",
+      "?.lua"
+  ],
+  "runtime.special": {
+      "VFS.Include": "require"
+  }
 }
