Alias include and shard_include to require

--- a/.luarc.json
+++ b/.luarc.json
@@ -7,6 +7,8 @@
       "?.lua"
   ],
   "runtime.special": {
-      "VFS.Include": "require"
+      "VFS.Include": "require",
+      "include": "require",
+      "shard_include": "require"
   }
 }
