--- a/.luarc.json
+++ b/.luarc.json
@@ -2,6 +2,9 @@
   "$schema": "https://raw.githubusercontent.com/sumneko/vscode-lua/master/setting/schema.json",
   "runtime.version": "Lua 5.1",
   "completion.requireSeparator": "/",
+  "workspace.library": [
+    "library"
+  ],
   "runtime.path": [
       "?",
       "?.lua"
